--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -4,11 +4,16 @@
             <i class="fa-brands fa-square-facebook"></i>
             <i class="fa-brands fa-square-instagram"></i>
             <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-youtube"></i>
         </div>
-        <div class="f-info-brand">&copy Wanderlust Private Limited </div>
+        <div class="f-info-brand">
+            <strong>🌊 Konkan Stay</strong> - Discover Coastal Maharashtra &copy; 2024
+        </div>
         <div class="f-info-links">
-            <a href="/privacy">Privacy</a>
-            <a href="/terms"> Terms</a>
+            <a href="/about">About Konkan</a>
+            <a href="/privacy">Privacy Policy</a>
+            <a href="/terms">Terms of Service</a>
+            <a href="/contact">Contact Us</a>
         </div>
     </div>
 </footer>
